<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/our_team_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/const1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/linear_mission"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/linear4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/linear2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amelia_stone"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/android_developer"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBaseline_toBaselineOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear5"
                app:layout_constraintLeft_toRightOf="@id/linear1"
                app:layout_constraintRight_toLeftOf="@id/linear3">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image1" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lee_su_yi"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/marketing_manager"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBaseline_toBaselineOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear6"
                app:layout_constraintLeft_toRightOf="@id/linear2"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image4" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anna"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/ui_ux_developer"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/linear5"
                app:layout_constraintTop_toBottomOf="@id/linear1">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image3" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mia_smith"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/web_developer"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/linear4"
                app:layout_constraintRight_toLeftOf=""
                app:layout_constraintTop_toBottomOf="@id/linear2">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image2" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selena_gomez"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/graphic_designer"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/linear5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear3">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image5" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/can_yaman"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/team_leader"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linear_mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/const1">

            <TextView
                android:id="@+id/mession-text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/mission_text"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mession_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:maxHeight="300dp"
                    android:text="@string/detail_text" />
            </ScrollView>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#DFD9D9"
            android:paddingLeft="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_mission">

            <ImageView
                android:id="@+id/imgone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/imgtwo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgtwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_stop_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/imgone"
                app:layout_constraintRight_toLeftOf="@id/imgthree"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_panorama_fish_eye_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/imgtwo"
                app:layout_constraintRight_toLeftOf="@id/imgfour"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgfour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_baseline_chevron_left_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/imgthree"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
