<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=""
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/linear1"
    android:layout_marginTop="140dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/loginbtn">
    <TextView
        android:text="@string/log_in_text"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:layout_marginTop="30dp"
        android:hint="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"/>
    <EditText
        android:hint="@string/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
    <Button
        android:id="@+id/loginbtn"
        app:layout_constraintBottom_toTopOf="@id/linear2"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/holo_orange_dark"
        android:layout_width="250dp"
        android:text="LOG IN"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_height="60dp"/>
    <LinearLayout
        android:id="@+id/linear2"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear3">
        <LinearLayout
            android:layout_weight="50"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/or_connect_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <view
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray"
                android:layout_width="5dp"
                android:layout_height="100dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:text="Facebook"
                android:layout_height="wrap_content"
                android:background="#FAF8F8" />

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAF8F8"
                android:text="Gmail"/>


        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear3"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_weight="50"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:text="forget password?"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <view
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray"
                android:layout_width="5dp"
                android:layout_height="30dp"/>
        </LinearLayout>

        <TextView
            android:layout_weight="50"
            android:gravity="center"
            android:text="create new account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>