<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6B8BA">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/package_shapping"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/linearOne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toTopOf="@id/linearTwo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:paddingLeft="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_vertical"
                android:background="#C7C9CA"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_product_box" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="#C7C9CA"
            android:orientation="vertical"
            android:paddingLeft="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="1.50 kg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="weight/piece" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="20cm * 15cm * 10cm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="size/piece" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Ships out within 5 days" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="processing Time" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTwo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F4F6F7"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toTopOf="@id/const1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearOne">

        <TextView
            android:id="@+id/textone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_weight="20"
            android:text="@string/ship_address"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="80"
            android:src="@drawable/ic_next" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/const1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E5E6E6"
       android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/ptice_linrst"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearTwo">

        <TextView
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:id="@+id/deliver_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_method"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintBottom_toTopOf="@id/onetv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/onetv"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/delivery_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/twoTv"
            app:layout_constraintTop_toBottomOf="@id/deliver_method"
            />

        <TextView
            android:id="@+id/twoTv"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:text="@string/cost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/onetv"
            app:layout_constraintRight_toLeftOf="@id/threeTv"
            app:layout_constraintTop_toBottomOf="@id/deliver_method"
            app:layout_constraintBaseline_toBaselineOf="@id/onetv"/>

        <TextView
            android:id="@+id/threeTv"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:text="Tracking Carriar"
            app:layout_constraintLeft_toRightOf="@id/twoTv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/onetv"
            app:layout_constraintTop_toBottomOf="@id/deliver_method"
            android:layout_marginBottom="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/ptice_linrst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#E9EFEF"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/const1">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="80">
            <TextView
                android:text="8 - 15 Days"
                android:layout_weight="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="Ks 5,000 "
                android:layout_weight="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="MGL Delivery"
                android:layout_weight="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
            android:layout_weight="20"
                android:src="@drawable/ic_symbol"
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="80">
            <TextView
                android:text="5 - 10 Days"
                android:layout_weight="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="Ks 32,000 "
                android:layout_weight="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="DHL Delivery"
                android:layout_weight="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_weight="20"
                android:src="@drawable/ic_circle"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>